--- a/dicee.html
+++ b/dicee.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <script src="C:\Users\sneha\OneDrive\Desktop\Web devlopment\Dice game\dice.js" charset="utf-8"></script>
+    <script src="dice.js" charset="utf-8"></script>
 
 
   </body>
